examples/invalid/program28.c
int main(void) {
    int x;
    x = 5;
    x = x + "text";
    return x;
}

